--- a/Oparating Systems/minix/ReadMe
+++ b/Oparating Systems/minix/ReadMe
@@ -1,3 +1,3 @@
 Minix is an operating system similar with unix.
 in this system with help of vim editor i have made some changes.
-The changes which i've told to do can be found in ReadMe1.pdf and how i did these in ReadMe2.pdf
+The changes which i've told to do can be found in README2.pdf and how i did these in README.pdf
