--- a/Oparating Systems/minix/ReadMe
+++ b/Oparating Systems/minix/ReadMe
@@ -1,3 +1,3 @@
 Minix is an operating system similar with unix.
-in this system with help of vim editor i have made some changes.
-The changes which i've told to do can be found in README2.pdf and how i did these in README.pdf
+I have made some changes in this OS using vim editor.
+The changes which I was told to do can be found in README2.pdf and the way I did these in README.pdf
