--- a/Neural Networks/ReadMe
+++ b/Neural Networks/ReadMe
@@ -1,2 +1,2 @@
-In this project i implement a neural network with MLP(Multi Layer Perceptron).
-this MLP can seperate given numbers in two specific categories which delemitation has initializes in the beginning.
+In this project Ι implement a neural network with MLP(Multi Layer Perceptron).
+Τhis MLP can seperate given numbers in two specific categories which delemitation has initializes in the beginning.
